--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -600,17 +600,9 @@
  </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="Assembly-CSharp-firstpass.csproj">
-      <Project>{ca7ce57b-3839-c05d-128c-28a1e81af24b}</Project>
-      <Name>Assembly-CSharp-firstpass</Name>
-    </ProjectReference>
     <ProjectReference Include="Assembly-CSharp.csproj">
       <Project>{436a454a-dc76-1891-311d-a4db5decec47}</Project>
       <Name>Assembly-CSharp</Name>
-    </ProjectReference>
-    <ProjectReference Include="Assembly-CSharp-Editor-firstpass.csproj">
-      <Project>{dbbd8002-161e-1626-250b-c3a98fbf4a7f}</Project>
-      <Name>Assembly-CSharp-Editor-firstpass</Name>
     </ProjectReference>
     <ProjectReference Include="UnityEditor.TestRunner.csproj">
       <Project>{a65b59c2-690e-a81f-a7bd-381211edc5b5}</Project>
@@ -627,6 +619,10 @@
     <ProjectReference Include="Unity.Timeline.Editor.csproj">
       <Project>{3d3dfda5-731c-91a5-8152-9a92758d0b7d}</Project>
       <Name>Unity.Timeline.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Cinemachine.csproj">
+      <Project>{b02d4f43-b966-265e-5c30-0ba82adfea04}</Project>
+      <Name>Cinemachine</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.RenderPipelines.Universal.Shaders.csproj">
       <Project>{e1f220bf-177b-2e10-b1a0-61e31c990a71}</Project>
@@ -696,6 +692,14 @@
       <Project>{bd0b4d41-da80-5edc-31d6-fbaa01f688b0}</Project>
       <Name>Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary</Name>
     </ProjectReference>
+    <ProjectReference Include="Unity.2D.Sprite.Editor.csproj">
+      <Project>{8d2cf23d-edaf-73f8-1ec8-33ad804e3489}</Project>
+      <Name>Unity.2D.Sprite.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="com.unity.cinemachine.editor.csproj">
+      <Project>{8f57bcf9-2ac7-723e-c604-9275074a6f3b}</Project>
+      <Name>com.unity.cinemachine.editor</Name>
+    </ProjectReference>
     <ProjectReference Include="Unity.ProBuilder.AddOns.Editor.csproj">
       <Project>{13fbebd2-5261-ea26-79bf-8396be8f732c}</Project>
       <Name>Unity.ProBuilder.AddOns.Editor</Name>
@@ -716,13 +720,49 @@
       <Project>{261b0351-3bc9-a45d-b634-7827ab193255}</Project>
       <Name>UnityEditor.UI</Name>
     </ProjectReference>
-    <ProjectReference Include="Cinemachine.csproj">
-      <Project>{b02d4f43-b966-265e-5c30-0ba82adfea04}</Project>
-      <Name>Cinemachine</Name>
+    <ProjectReference Include="Unity.2D.Animation.Runtime.csproj">
+      <Project>{6e2719cc-056d-42cc-9739-f2e7195003e8}</Project>
+      <Name>Unity.2D.Animation.Runtime</Name>
     </ProjectReference>
-    <ProjectReference Include="com.unity.cinemachine.editor.csproj">
-      <Project>{8f57bcf9-2ac7-723e-c604-9275074a6f3b}</Project>
-      <Name>com.unity.cinemachine.editor</Name>
+    <ProjectReference Include="Unity.2D.Animation.Triangle.Runtime.csproj">
+      <Project>{727eeaa2-b571-2a98-f9c3-6994d95199bf}</Project>
+      <Name>Unity.2D.Animation.Triangle.Runtime</Name>
+    </ProjectReference>
+    <ProjectReference Include="PsdPlugin.csproj">
+      <Project>{19a4e762-51ea-b7f4-850b-dffff6367ac9}</Project>
+      <Name>PsdPlugin</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.Mathematics.csproj">
+      <Project>{8cdd97f5-54cb-b85b-b68a-d70b59991b51}</Project>
+      <Name>Unity.Mathematics</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.2D.Psdimporter.Editor.csproj">
+      <Project>{309751cd-002d-4c08-d326-8421e8669f33}</Project>
+      <Name>Unity.2D.Psdimporter.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.InternalAPIEngineBridge.001.csproj">
+      <Project>{4a8aa2c5-68fe-355a-3614-b1a0a0536075}</Project>
+      <Name>Unity.InternalAPIEngineBridge.001</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.2D.Common.Runtime.csproj">
+      <Project>{24f1fb91-1e77-5868-28f7-66d4baf68c7f}</Project>
+      <Name>Unity.2D.Common.Runtime</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.2D.Animation.Editor.csproj">
+      <Project>{4b5554f5-36dc-b704-b2ba-e6df74cbea4d}</Project>
+      <Name>Unity.2D.Animation.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.Mathematics.Editor.csproj">
+      <Project>{7ef2392e-3bdb-8613-a9a2-e40783e90fb5}</Project>
+      <Name>Unity.Mathematics.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.2D.Common.Editor.csproj">
+      <Project>{233ac712-ee6c-92c1-f1ff-0ba39954a01d}</Project>
+      <Name>Unity.2D.Common.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.InternalAPIEditorBridge.001.csproj">
+      <Project>{bbef9ee3-3958-a0a4-1fc0-8c9d1baec6b5}</Project>
+      <Name>Unity.InternalAPIEditorBridge.001</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
