--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -48,6 +48,7 @@
      <Compile Include="Assets\Scripts\BasicCharacter.cs" />
      <Compile Include="Assets\Scripts\CamZone.cs" />
      <Compile Include="Assets\Scripts\Enemy.cs" />
+     <Compile Include="Assets\Scripts\EnemyState.cs" />
      <Compile Include="Assets\Scripts\Key.cs" />
      <Compile Include="Assets\Scripts\KeyEnum.cs" />
      <Compile Include="Assets\Scripts\Keyhole.cs" />
@@ -608,6 +609,10 @@
       <Project>{b02d4f43-b966-265e-5c30-0ba82adfea04}</Project>
       <Name>Cinemachine</Name>
     </ProjectReference>
+    <ProjectReference Include="Unity.2D.Animation.Runtime.csproj">
+      <Project>{6e2719cc-056d-42cc-9739-f2e7195003e8}</Project>
+      <Name>Unity.2D.Animation.Runtime</Name>
+    </ProjectReference>
     <ProjectReference Include="Unity.RenderPipelines.Universal.Shaders.csproj">
       <Project>{e1f220bf-177b-2e10-b1a0-61e31c990a71}</Project>
       <Name>Unity.RenderPipelines.Universal.Shaders</Name>
@@ -664,6 +669,14 @@
       <Project>{72d425c0-2b69-5f7f-c8b1-c89e691f375d}</Project>
       <Name>Unity.Timeline</Name>
     </ProjectReference>
+    <ProjectReference Include="Unity.2D.Animation.Triangle.Runtime.csproj">
+      <Project>{727eeaa2-b571-2a98-f9c3-6994d95199bf}</Project>
+      <Name>Unity.2D.Animation.Triangle.Runtime</Name>
+    </ProjectReference>
+    <ProjectReference Include="PsdPlugin.csproj">
+      <Project>{19a4e762-51ea-b7f4-850b-dffff6367ac9}</Project>
+      <Name>PsdPlugin</Name>
+    </ProjectReference>
     <ProjectReference Include="Unity.CollabProxy.Editor.csproj">
       <Project>{014cf256-7e7e-b85f-a832-72efaf53521b}</Project>
       <Name>Unity.CollabProxy.Editor</Name>
@@ -676,9 +689,29 @@
       <Project>{bd0b4d41-da80-5edc-31d6-fbaa01f688b0}</Project>
       <Name>Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary</Name>
     </ProjectReference>
+    <ProjectReference Include="Unity.Mathematics.csproj">
+      <Project>{8cdd97f5-54cb-b85b-b68a-d70b59991b51}</Project>
+      <Name>Unity.Mathematics</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.2D.Psdimporter.Editor.csproj">
+      <Project>{309751cd-002d-4c08-d326-8421e8669f33}</Project>
+      <Name>Unity.2D.Psdimporter.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.InternalAPIEngineBridge.001.csproj">
+      <Project>{4a8aa2c5-68fe-355a-3614-b1a0a0536075}</Project>
+      <Name>Unity.InternalAPIEngineBridge.001</Name>
+    </ProjectReference>
     <ProjectReference Include="Unity.2D.Sprite.Editor.csproj">
       <Project>{8d2cf23d-edaf-73f8-1ec8-33ad804e3489}</Project>
       <Name>Unity.2D.Sprite.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.2D.Common.Runtime.csproj">
+      <Project>{24f1fb91-1e77-5868-28f7-66d4baf68c7f}</Project>
+      <Name>Unity.2D.Common.Runtime</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.2D.Animation.Editor.csproj">
+      <Project>{4b5554f5-36dc-b704-b2ba-e6df74cbea4d}</Project>
+      <Name>Unity.2D.Animation.Editor</Name>
     </ProjectReference>
     <ProjectReference Include="com.unity.cinemachine.editor.csproj">
       <Project>{8f57bcf9-2ac7-723e-c604-9275074a6f3b}</Project>
@@ -692,6 +725,10 @@
       <Project>{fea2b634-244b-f9da-349f-11ea9dd6c56a}</Project>
       <Name>Unity.ShaderGraph.Editor</Name>
     </ProjectReference>
+    <ProjectReference Include="Unity.Mathematics.Editor.csproj">
+      <Project>{7ef2392e-3bdb-8613-a9a2-e40783e90fb5}</Project>
+      <Name>Unity.Mathematics.Editor</Name>
+    </ProjectReference>
     <ProjectReference Include="Unity.RenderPipelines.Core.ShaderLibrary.csproj">
       <Project>{026d59e7-2d9a-6b68-95a0-fa00c8d2b5cd}</Project>
       <Name>Unity.RenderPipelines.Core.ShaderLibrary</Name>
@@ -699,6 +736,14 @@
     <ProjectReference Include="Unity.TextMeshPro.csproj">
       <Project>{70ee415a-2a35-286b-acea-760676b5c8f9}</Project>
       <Name>Unity.TextMeshPro</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.2D.Common.Editor.csproj">
+      <Project>{233ac712-ee6c-92c1-f1ff-0ba39954a01d}</Project>
+      <Name>Unity.2D.Common.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.InternalAPIEditorBridge.001.csproj">
+      <Project>{bbef9ee3-3958-a0a4-1fc0-8c9d1baec6b5}</Project>
+      <Name>Unity.InternalAPIEditorBridge.001</Name>
     </ProjectReference>
     <ProjectReference Include="UnityEditor.UI.csproj">
       <Project>{261b0351-3bc9-a45d-b634-7827ab193255}</Project>
